--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,17 +7,17 @@
     tools:context=".HomeActivity">
 
     <TextView
+        android:id="@+id/banner"
+        android:layout_width="215dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="sans-serif"
         android:text="@string/app_name"
         android:textColor="@color/colorBlack"
         android:textSize="75sp"
-        android:typeface="sans"
         android:textStyle="bold|italic"
-        android:id="@+id/banner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="32dp"
+        android:typeface="sans"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
