--- a/app/src/main/res/layout/activity_scoreboard.xml
+++ b/app/src/main/res/layout/activity_scoreboard.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#1B5E20">
 
     <TextView
         android:id="@+id/p1name"
@@ -13,19 +14,32 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="52dp"
         android:text="TextView"
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/colorWhite"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/p1Score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="32dp"
+        android:text="P1 Score"
+        android:textColor="@color/colorWhite"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/p1name" />
+
+    <TextView
         android:id="@+id/p2name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="80dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="60dp"
         android:text="TextView"
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/colorWhite"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,21 +49,21 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:text="@string/vs"
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/colorWhite"
         android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@+id/p2name"
-        app:layout_constraintHorizontal_bias="0.545"
+        app:layout_constraintHorizontal_bias="0.524"
         app:layout_constraintStart_toEndOf="@+id/p1name"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TableLayout
         android:layout_width="180dp"
         android:layout_height="360dp"
-        android:layout_marginTop="70dp"
+        app:layout_constraintBottom_toTopOf="@+id/bUndo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.164"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/p1name">
+        app:layout_constraintTop_toBottomOf="@+id/p1Score">
 
 
         <TableRow
@@ -57,12 +71,15 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/redBall"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_column="1"
-                android:background="#F44336" />
+                android:background="#F44336"
+                android:onClick="redPotted" />
 
             <TextView
+                android:id="@+id/whiteBall"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_column="2"
@@ -74,17 +91,20 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/yellowBall"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_column="1"
                 android:background="#FFEB3B"
-                android:text=" " />
+                android:onClick="yellowPotted" />
 
             <TextView
+                android:id="@+id/greenBall"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_column="2"
-                android:background="#4CAF50" />
+                android:background="#4CAF50"
+                android:onClick="greenPotted" />
         </TableRow>
 
         <TableRow
@@ -92,16 +112,20 @@
             android:layout_height="90dp">
 
             <TextView
+                android:id="@+id/brownBall"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_column="1"
-                android:background="#654412" />
+                android:background="#654412"
+                android:onClick="brownPotted" />
 
             <TextView
+                android:id="@+id/blueBall"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_column="2"
-                android:background="#2196F3" />
+                android:background="#2196F3"
+                android:onClick="bluePotted" />
         </TableRow>
 
         <TableRow
@@ -109,16 +133,33 @@
             android:layout_height="90dp">
 
             <TextView
+                android:id="@+id/pinkBall"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_column="1"
-                android:background="#E65184" />
+                android:background="#E65184"
+                android:onClick="pinkPotted" />
 
             <TextView
+                android:id="@+id/blackBall"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_column="2"
-                android:background="@color/colorBlack" />
+                android:background="@color/colorBlack"
+                android:onClick="blackPotted" />
         </TableRow>
     </TableLayout>
+
+    <Button
+        android:id="@+id/bUndo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:onClick="undoLastBall"
+        android:text="@string/Undo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
