--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -36,6 +36,8 @@
 
     <EditText
         android:id="@+id/p1name"
+        android:backgroundTint="@android:color/holo_green_light"
+        android:textCursorDrawable="@null"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="96dp"
@@ -49,6 +51,8 @@
 
     <EditText
         android:id="@+id/p2name"
+        android:backgroundTint="@android:color/holo_green_light"
+        android:textCursorDrawable="@null"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="96dp"
