--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,16 +8,18 @@
 
     <TextView
         android:id="@+id/banner"
-        android:layout_width="215dp"
+        android:layout_width="0dp"
         android:layout_height="100dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="sans-serif"
         android:text="@string/app_name"
+        android:textAlignment="center"
         android:textColor="@color/colorBlack"
         android:textSize="75sp"
         android:textStyle="bold|italic"
         android:typeface="sans"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,53 +27,56 @@
         android:id="@+id/welcomeMessage"
         android:layout_width="283dp"
         android:layout_height="45dp"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="@string/welcome_header"
         android:textColor="@color/colorBlack"
         android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/banner" />
 
     <EditText
         android:id="@+id/p1name"
-        android:backgroundTint="@android:color/holo_green_light"
-        android:textCursorDrawable="@null"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="312dp"
+        android:layout_marginTop="124dp"
+        android:backgroundTint="@android:color/holo_green_light"
         android:ems="10"
         android:hint="@string/name_player_one"
         android:inputType="textPersonName"
         android:textAlignment="center"
+        android:textCursorDrawable="@null"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/welcomeMessage" />
 
     <EditText
         android:id="@+id/p2name"
-        android:backgroundTint="@android:color/holo_green_light"
-        android:textCursorDrawable="@null"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="388dp"
+        android:layout_marginTop="32dp"
+        android:backgroundTint="@android:color/holo_green_light"
         android:ems="10"
         android:hint="@string/name_player_two"
         android:inputType="textPersonName"
         android:textAlignment="center"
+        android:textCursorDrawable="@null"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/p1name" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="144dp"
-        android:layout_marginTop="448dp"
+        android:layout_marginTop="32dp"
         android:onClick="sendMessage"
         android:text="@string/start_match"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/p2name" />
 </androidx.constraintlayout.widget.ConstraintLayout>
