--- a/app/src/main/res/layout/activity_scoreboard.xml
+++ b/app/src/main/res/layout/activity_scoreboard.xml
@@ -180,6 +180,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bUndo" />
+        app:layout_constraintTop_toBottomOf="@+id/bUndo" >
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
