--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,9 +8,9 @@
 
     <TextView
         android:id="@+id/banner"
-        android:layout_width="0dp"
+        android:layout_width="fill_parent"
         android:layout_height="100dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="68dp"
         android:fontFamily="sans-serif"
         android:text="@string/app_name"
         android:textAlignment="center"
@@ -25,11 +25,12 @@
 
     <TextView
         android:id="@+id/welcomeMessage"
-        android:layout_width="283dp"
+        android:layout_width="fill_parent"
         android:layout_height="45dp"
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="@string/welcome_header"
+        android:textAlignment="center"
         android:textColor="@color/colorBlack"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,4 +80,15 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/p2name" />
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/homeToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:minHeight="?attr/actionBarSize"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
