--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -15,9 +15,17 @@
         app:showAsAction="never">
     </item>
     <item
+        android:id="@+id/about"
+        android:title="About"
+        android:orderInCategory="101"
+        app:showAsAction="never">
+    </item>
+    <item
         android:id="@+id/exit"
         android:title="Exit"
         android:orderInCategory="101"
         app:showAsAction="never">
     </item>
+
+
 </menu>
